# math_cc

./: CMakeLists.txt  MIGRATION_PLAN.md  README.md  ROADMAP.md  a.out  consolidate.py  consolidated_project.txt  gitpush.sh  update_project.sh
.github/workflows/: ci.yml
inc/: atopo.h
inc/atopo/: chain.h  complex.h  concepts.h  core.h  dynamic_complex.h  math.h  operators.h  persistence.h  query.h  traits.h
src/: atopo.cpp  atopo_linbox.cpp  atopo_solver.cpp  main.cpp
test/: test_atopo.cpp  test_common.h  test_homology.cpp  test_integration_homology.cpp  test_integration_persistence.cpp  test_klein_bottle.cpp  test_operators.cpp  test_persistence.cpp  test_rp2_integration.cpp  test_torsion.cpp  test_unit_concepts.cpp  test_unit_math.cpp  test_unit_operators.cpp  test_validation.cpp
